[gd_scene load_steps=40 format=3 uid="uid://eidyg2m2qpb0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_onbhf"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="1_s7dc4"]
[ext_resource type="Script" path="res://scripts/power_up_state_manager.gd" id="1_vxuai"]
[ext_resource type="Script" path="res://scripts/game.gd" id="2_fq0ei"]
[ext_resource type="Script" path="res://scripts/fail_container_ui.gd" id="3_3d8vx"]
[ext_resource type="Script" path="res://scripts/spawn_area.gd" id="4_85fx6"]
[ext_resource type="Texture2D" uid="uid://chderehfhtemy" path="res://resources/images/textures/ground1.png" id="4_kjist"]
[ext_resource type="PackedScene" uid="uid://cwdwree8x8l0" path="res://prefabs/player/player.tscn" id="4_qfimj"]
[ext_resource type="Texture2D" uid="uid://4p44e5afuo25" path="res://resources/images/textures/wall1.png" id="5_05m2l"]
[ext_resource type="Script" path="res://scripts/ui_manager.gd" id="5_hw5b0"]
[ext_resource type="Texture2D" uid="uid://dt1lly1h0obi8" path="res://resources/images/textures/wall1_top.png" id="6_h8hc1"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="9_5kvnm"]
[ext_resource type="FontFile" uid="uid://dnqmabcw4y52w" path="res://resources/fonts/ari-w9500/ari-w9500-display.ttf" id="9_u3jex"]
[ext_resource type="AudioStream" uid="uid://cs70mocqmwkg3" path="res://resources/audio/sfx/bounce.wav" id="10_el4yl"]
[ext_resource type="Texture2D" uid="uid://e0b0cxxgm4gg" path="res://resources/images/kenney_input-prompts-pixel-16/Tiles/tile_0253.png" id="10_so4hy"]
[ext_resource type="Texture2D" uid="uid://bsfio1375bden" path="res://resources/images/kenney_input-prompts-pixel-16/Tiles/tile_0612.png" id="11_6qet0"]
[ext_resource type="AudioStream" uid="uid://chy8q11n2mvxr" path="res://resources/audio/sfx/pop.wav" id="11_js3ue"]
[ext_resource type="AudioStream" uid="uid://crpxprorluevy" path="res://resources/audio/music/bub_theme_master.wav" id="12_dlqof"]
[ext_resource type="AudioStream" uid="uid://b1itp1cyelbb5" path="res://resources/audio/music/bub_menu.wav" id="13_j7iep"]
[ext_resource type="AudioStream" uid="uid://6q545sjqgcw8" path="res://resources/audio/sfx/start_game_2.wav" id="14_ybwpb"]
[ext_resource type="AudioStream" uid="uid://dfysisfgul7pu" path="res://resources/audio/sfx/game_over.wav" id="15_5b15r"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f6xx8"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_qlu05"]
sky_material = SubResource("ProceduralSkyMaterial_f6xx8")

[sub_resource type="Environment" id="Environment_mnawe"]
background_mode = 2
sky = SubResource("Sky_qlu05")
ambient_light_sky_contribution = 0.55
tonemap_mode = 3
tonemap_exposure = 1.2
tonemap_white = 4.0
glow_enabled = true
fog_enabled = true
fog_light_energy = 0.2

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ig68j"]
points = PackedVector3Array(-11.5, 0, -7.5, -11.5, 0, 7.5, 11.5, 0, -7.5, 11.5, 0, 7.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ane2a"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("4_kjist")
uv1_scale = Vector3(0.3, 0.3, 0.3)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_mr218"]
material = SubResource("StandardMaterial3D_ane2a")
size = Vector2(23, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ovoxn"]
albedo_texture = ExtResource("6_h8hc1")
uv1_scale = Vector3(0.125, 0.25, 0.125)
uv1_offset = Vector3(0.17, 1.46, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_lioan"]
material = SubResource("StandardMaterial3D_ovoxn")
size = Vector3(0.2, 3.5, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1khbg"]
albedo_texture = ExtResource("5_05m2l")
uv1_scale = Vector3(0.125, 0.25, 0.125)
uv1_offset = Vector3(0.17, 1.46, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_n1obh"]
material = SubResource("StandardMaterial3D_1khbg")
size = Vector3(0.2, 3.5, 15)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kb6lh"]
points = PackedVector3Array(-0.1, -3.5, -7.5, 0.1, -3.5, -7.5, -0.1, -3.5, 7.5, -0.1, 3.5, -7.5, 0.1, 3.5, -7.5, 0.1, -3.5, 7.5, -0.1, 3.5, 7.5, 0.1, 3.5, 7.5)

[sub_resource type="BoxMesh" id="BoxMesh_6vjlw"]
material = SubResource("StandardMaterial3D_ovoxn")
size = Vector3(0.2, 3.5, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fmfw5"]
albedo_texture = ExtResource("5_05m2l")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_j1wu4"]
material = SubResource("StandardMaterial3D_fmfw5")
size = Vector3(0.2, 7, 23)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w1a7o"]
points = PackedVector3Array(-0.1, -3.5, -11.5, 0.1, -3.5, -11.5, -0.1, -3.5, 11.5, -0.1, 3.5, -11.5, 0.1, 3.5, -11.5, 0.1, -3.5, 11.5, -0.1, 3.5, 11.5, 0.1, 3.5, 11.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6xk43"]
no_depth_test = true
shading_mode = 0
diffuse_mode = 3
specular_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_8p442"]
material = SubResource("StandardMaterial3D_6xk43")
size = Vector3(6, 1, 6)

[sub_resource type="Theme" id="Theme_njggt"]
default_font = ExtResource("9_u3jex")
Button/font_sizes/font_size = 25

[node name="ActualLevel" type="Node" node_paths=PackedStringArray("main_menu", "game")]
script = ExtResource("1_s7dc4")
main_menu = NodePath("MainMenu")
game = NodePath("Game")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mnawe")

[node name="Game" type="Node" parent="." node_paths=PackedStringArray("spawn_area")]
script = ExtResource("2_fq0ei")
player_scene = ExtResource("4_qfimj")
spawn_area = NodePath("Node3D/SpawnArea")

[node name="Node3D" type="Node3D" parent="Game"]

[node name="Level" type="Node3D" parent="Game/Node3D"]

[node name="Floor" type="StaticBody3D" parent="Game/Node3D/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.846427, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game/Node3D/Level/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.90633, 0)
shape = SubResource("ConvexPolygonShape3D_ig68j")

[node name="FloorMesh" type="MeshInstance3D" parent="Game/Node3D/Level/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.90633, 0)
mesh = SubResource("PlaneMesh_mr218")
skeleton = NodePath("../../..")

[node name="Wall" type="StaticBody3D" parent="Game/Node3D/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, 3.5, 0)

[node name="WallMesh" type="MeshInstance3D" parent="Game/Node3D/Level/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72198, 0)
mesh = SubResource("BoxMesh_lioan")

[node name="WallMesh2" type="MeshInstance3D" parent="Game/Node3D/Level/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.68161, 0)
mesh = SubResource("BoxMesh_n1obh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game/Node3D/Level/Wall"]
shape = SubResource("ConvexPolygonShape3D_kb6lh")

[node name="Wall2" type="StaticBody3D" parent="Game/Node3D/Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.5, 3.5, 0)

[node name="WallMesh2" type="MeshInstance3D" parent="Game/Node3D/Level/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76765, 0)
mesh = SubResource("BoxMesh_6vjlw")

[node name="WallMesh" type="MeshInstance3D" parent="Game/Node3D/Level/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.67408, 0)
mesh = SubResource("BoxMesh_lioan")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game/Node3D/Level/Wall2"]
shape = SubResource("ConvexPolygonShape3D_kb6lh")

[node name="Wall3" type="StaticBody3D" parent="Game/Node3D/Level"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.5, -7.5)

[node name="WallMesh" type="MeshInstance3D" parent="Game/Node3D/Level/Wall3"]
mesh = SubResource("BoxMesh_j1wu4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game/Node3D/Level/Wall3"]
shape = SubResource("ConvexPolygonShape3D_w1a7o")

[node name="Wall4" type="StaticBody3D" parent="Game/Node3D/Level"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.5, 7.5)

[node name="WallMesh" type="MeshInstance3D" parent="Game/Node3D/Level/Wall4"]
mesh = SubResource("BoxMesh_j1wu4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Game/Node3D/Level/Wall4"]
shape = SubResource("ConvexPolygonShape3D_w1a7o")

[node name="CameraPosition" type="Marker3D" parent="Game/Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 11.3, 4.01)

[node name="PlayerPosition" type="Marker3D" parent="Game/Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SpawnArea" type="Node3D" parent="Game/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.57724, 0)
script = ExtResource("4_85fx6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Game/Node3D/SpawnArea"]
visible = false
mesh = SubResource("BoxMesh_8p442")
metadata/_edit_lock_ = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game/Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 11.9397, 0)
light_color = Color(1, 0.924696, 0.608513, 1)
shadow_enabled = true
shadow_opacity = 0.8

[node name="UIElements" type="CanvasLayer" parent="."]
script = ExtResource("5_hw5b0")

[node name="ThemeNode" type="Control" parent="UIElements"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_njggt")

[node name="HUD" type="Control" parent="UIElements/ThemeNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="UIElements/ThemeNode/HUD"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="TimerLabel" type="Label" parent="UIElements/ThemeNode/HUD/Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Current Time: 00"

[node name="BestTimeLabel" type="Label" parent="UIElements/ThemeNode/HUD/Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Best Time: 00"

[node name="ScoreLabel" type="Label" parent="UIElements/ThemeNode/HUD/Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="BestScoreLabel" type="Label" parent="UIElements/ThemeNode/HUD/Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="PowerUpsContainer" type="VBoxContainer" parent="UIElements/ThemeNode/HUD/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="FailContainer" type="Control" parent="UIElements/ThemeNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_3d8vx")

[node name="ColorRect" type="ColorRect" parent="UIElements/ThemeNode/FailContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 0.862745)

[node name="Container" type="VBoxContainer" parent="UIElements/ThemeNode/FailContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -48.0
offset_right = 137.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="UIElements/ThemeNode/FailContainer/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Result Label"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/FailContainer/Container"]
custom_minimum_size = Vector2(0, 22.52)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIElements/ThemeNode/FailContainer/Container"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="UIElements/ThemeNode/FailContainer/Container/HBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/FailContainer/Container/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="UIElements/ThemeNode/FailContainer/Container/HBoxContainer"]
layout_mode = 2
text = "Back to main menu"

[node name="MainMenuUI" type="Control" parent="UIElements/ThemeNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UIElements/ThemeNode/MainMenuUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.350649, 0.350649, 0.350649, 0.65098)

[node name="MainMenuContainer" type="VBoxContainer" parent="UIElements/ThemeNode/MainMenuUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -22.5
offset_right = 104.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.968097, 0, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Bubble Bub's Bubbles"

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start game"

[node name="Spacer2" type="Control" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="InstructionsButton" type="Button" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Instructions"

[node name="Spacer3" type="Control" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="QuitButton" type="Button" parent="UIElements/ThemeNode/MainMenuUI/MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Instructions" type="VBoxContainer" parent="UIElements/ThemeNode/MainMenuUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -66.0
offset_right = 303.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UIElements/ThemeNode/MainMenuUI/Instructions"]
layout_mode = 2

[node name="Label" type="Label" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Move:"

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_so4hy")
stretch_mode = 4

[node name="Spacer2" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "WASD"

[node name="Spacer3" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "ARROW keys"

[node name="HBoxContainer2" type="HBoxContainer" parent="UIElements/ThemeNode/MainMenuUI/Instructions"]
layout_mode = 2

[node name="Label" type="Label" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Dash:"

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer2"]
custom_minimum_size = Vector2(109.77, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("11_6qet0")
stretch_mode = 4

[node name="Spacer2" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="UIElements/ThemeNode/MainMenuUI/Instructions/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SPACEBAR"

[node name="Spacer" type="Control" parent="UIElements/ThemeNode/MainMenuUI/Instructions"]
custom_minimum_size = Vector2(0, 62.03)
layout_mode = 2

[node name="InstructionsBackButton" type="Button" parent="UIElements/ThemeNode/MainMenuUI/Instructions"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="CreditsContainer" type="VBoxContainer" parent="UIElements/ThemeNode/MainMenuUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -307.0
offset_right = 632.0
offset_bottom = -20.0
grow_vertical = 0
alignment = 2

[node name="Credits" type="Label" parent="UIElements/ThemeNode/MainMenuUI/CreditsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Credits:
Tom Ingvall - Graphics
Anna Malassu - Audio & Code
Alexander Streng - Code
Akseli Viitanen - Code"

[node name="FadeInOutRect" type="ColorRect" parent="UIElements"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node" parent="."]
script = ExtResource("1_onbhf")

[node name="CameraRotate" type="Node3D" parent="MainMenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.071, 0)

[node name="Camera3D" type="Camera3D" parent="MainMenu/CameraRotate"]
transform = Transform3D(1, 0, 0, 0, 0.891007, 0.453991, 0, -0.453991, 0.891007, 0, 0, 4)
fov = 76.0

[node name="AudioListener3D" type="AudioListener3D" parent="MainMenu/CameraRotate/Camera3D"]
current = true

[node name="PowerUpStateManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_vxuai")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("9_5kvnm")
bounce_stream = ExtResource("10_el4yl")
pop_stream = ExtResource("11_js3ue")

[node name="BCG" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = ExtResource("12_dlqof")

[node name="Menu_BCG" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = ExtResource("13_j7iep")
volume_db = -9.173

[node name="GameStart" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = ExtResource("14_ybwpb")
volume_db = -3.0

[node name="GameOver" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = ExtResource("15_5b15r")
